# vedirect-prom

./: Cargo.toml  Dockerfile.raspberry-armv6  Dockerfile.raspberry-armv7  Makefile  README.md  vedirect-prom.service
.cargo/: config
src/: main.rs
