[package]
name = "vedirect-prom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11"
serialport = { version = "4.1", default-features = false }
prometheus-client = "0.15"
vedirect = { git = "https://github.com/dbr/vedirect-rs.git", rev="ea8d4ecf1a8e9030941e3eedb44a570fd03e5641" }
